more sections add

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:wght@300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <title>PortoLogística</title>
@@ -31,6 +33,70 @@
           <p>Soluções integradas para gestão portuária</p>
           <button>Serviços</button>
         </div>
+      </section>
+      <section class="container_integrated_port_management">
+        <div>
+          <span>Gestão portuária integrada</span>
+          <h3>Simplificando suas operações portuarias</h3>
+          <p>
+            A PortoLogistica é um sistema de gestão integrado de ultima geração
+            desenvolvido para aumentar a eficiência e a segurança das operações
+            portuárias no Brasil. Nossa plataforma oferece monitoramento em
+            tempo real, automação de processos e análise de dados, garantindo
+            que suas necessidades de movimentação, descarga e armazenamento de
+            carga sejam atendidas com precisão. Faça parceria conosco para obter
+            uma solução robusta e confiável para agilizar seus fluxos
+            logísitcos.
+          </p>
+          <a href="">Entre em contato</a>
+        </div>
+        <img
+          src="assets/imagem_gestao_portuaria.png"
+          alt="foto de um navio cargueiro no mar"
+        />
+      </section>
+      <section class="container_soluctions">
+        <div>
+          <h3>Nossas soluções</h3>
+          <span>O que esperar do nosso sistema</span>
+        </div>
+        <section class="cards">
+          <article class="card">
+            <figure>
+              <img src="assets/img_box_1.png" alt="foto de containers" />
+              <figcaption>
+                <h4>Containers a todo momento</h4>
+                <p>
+                  Alugue seu container a qualquer momento entrando em contato
+                  com os nossos colaboradores
+                </p>
+              </figcaption>
+            </figure>
+          </article>
+          <article class="card">
+            <figure>
+              <img src="assets/img_box_2.png" alt="foto de containers" />
+              <figcaption>
+                <h4>+ 1000 navios</h4>
+                <p>
+                  Temos mais de 1000 navios prontos para lidar com suas demandas
+                </p>
+              </figcaption>
+            </figure>
+          </article>
+          <article class="card">
+            <figure>
+              <img src="assets/img_box_3.png" alt="foto de containers" />
+              <figcaption>
+                <h4>Containers a todo momento</h4>
+                <p>
+                  Alugue seu container a qualquer momento entrando em contato
+                  com os nossos colaboradores
+                </p>
+              </figcaption>
+            </figure>
+          </article>
+        </section>
       </section>
     </main>
   </body>
