new section services

--- a/index.html
+++ b/index.html
@@ -98,6 +98,33 @@
           </article>
         </section>
       </section>
+      <section class="container_services">
+        <div class="customer_service_and_sales">
+          <h2>Atendimento e Comercial</h2>
+          <span>Entre em contato com a unidade:</span>
+          <div>
+              <figure>
+                <img src="assets/img_niteroi.png" alt="imagem de niteroi" />
+                <figcaption>Niteroi</figcaption>
+              </figure>
+              <figure>
+                <img
+                  src="assets/img_ilha_conceicao.png"
+                  alt="imagem da ilha da conceição"
+                />
+                <figcaption>ilha da conceição</figcaption>
+              </figure>
+            </div>
+            <div>
+              <figure>
+                <img src="assets/img_santos.png" alt="imagem de santos" />
+                <figcaption>santos</figcaption>
+              </figure>
+              <figure>
+                <img src="assets/img_caju.png" alt="imagem do caju" />
+                <figcaption>caju</figcaption>
+            </div>
+      </section>
     </main>
   </body>
 </html>
