new feactures:section talk_to_us

--- a/index.html
+++ b/index.html
@@ -124,7 +124,25 @@
                 <img src="assets/img_caju.png" alt="imagem do caju" />
                 <figcaption>caju</figcaption>
             </div>
+          </div>
+          <div class="container_talk_to_us">
+            <h2>Fale conosco</h2>
+            <span>Se conecte com nossos colaboradores</span>
+            <form >
+              <label for="name">nome</label>
+              <input type="text" id="name">
+              <label for="email">email </label>
+              <input type="email" id="email">
+              <label for="tel">Telefone </label>
+              <input type="tel" id="tel ">
+              <label for="message ">Mensagem </label>
+              <textarea name="message" id="message" rows="10" cols="25" >
+              </textarea>
+              <button>enviar</button>
+            </form>
+          </div>
       </section>
     </main>
+    <footer> <p>© 2024 Desafio produzido para fins educativos, Escola Vai na Web.</p> </footer>
   </body>
 </html>
